Added installation steps for JavaFX