@@ -1,10 +1,19 @@
 # personalExpenseTracker
 
 A personal expense tracker application, built using JavaFX for frontend that writes to a local file.
+This project was built using SDK version 24.
 
 ```Installation Steps```
-- JavaFX
-- Writing to file
+
+```JavaFX```
+- You will find the relevant JavaFX version in the "lib" directory of this project
+
+Here are some steps needed to run the application from Intellij IDEA
+
+- Add the library: ```File → Project Structure → Libraries → + → Java → select the JavaFX lib folder. Apply.```
+- Run/Debug Configuration -> Edit Configurations -> VM Configurations -> Enter: ```--module-path "path.to.project/lib/javafx-Directory/lib" --add-modules javafx.controls,javafx.fxml```
+
+```File Handling```
 
 ```Running Instructions```
 
